konflux-ci/release/core/sealights-labid-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-service-controller-manager
spec:
  template:
    spec:
      containers:
      - name: manager
