konflux-ci/release/core/remove-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-service-egress-controller-manager
$patch: delete
