konflux-ci/release/core/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_release-service-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-service-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /mutate-appstudio-redhat-com-v1alpha1-author
  failurePolicy: Fail
  name: mauthor.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - releases
    - releaseplans
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /mutate-appstudio-redhat-com-v1alpha1-release
  failurePolicy: Fail
  name: mrelease.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - releases
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /mutate-appstudio-redhat-com-v1alpha1-releaseplan
  failurePolicy: Fail
  name: mreleaseplan.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - releaseplans
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-service-webhook-service
      namespace: release-service
      path: /mutate-appstudio-redhat-com-v1alpha1-releaseplanadmission
  failurePolicy: Fail
  name: mreleaseplanadmission.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - releaseplanadmissions
  sideEffects: None
